@@ -6,10 +6,11 @@
 ~~~~~~~~~~~
 When building the SendTo menu, allow nested subdirectories more than one
 level deep (Jonatan Liljedahl).
+Add 'Customise Menu...' to New submenu (suggested by Jesse Wagner).
 Can specify panel item arguments and short cut when adding via SOAP
 call (m0n5t3r). 
-Also for pinboard items (and fixed bugs related to
-pinboard_add_with_args) (Stephen Watson).
+Also for pinboard items (and fixed bugs related to pinboard_add_with_args)
+(Stephen Watson).
 
 28-Feb-2005
 ~~~~~~~~~~~
